# py-shdc

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  Specifications.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  status_report.py  test_basic.py  test_integration.py  test_simple_integration.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: release-request.md
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: changelog.rst  conf.py  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt  support.rst
docs/cli/: index.rst
docs/development/: index.rst  pypi-publishing.md  setup.rst
docs/examples/: index.rst  temperature_sensor.rst
docs/protocol/: index.rst  overview.rst
docs/tutorial/: basics.rst  hub_development.rst  index.rst
examples/: __init__.py  home_monitoring.py  temperature_sensor.py
scripts/: release.py
shdc/: __init__.py
shdc/cli/: __init__.py  hub.py  sensor.py
shdc/core/: __init__.py  messages.py  protocol.py
shdc/crypto/: __init__.py  encryption.py  keys.py
shdc/network/: __init__.py  discovery.py  transport.py
