[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-shdc"
version = "1.0.0"
description = "Python implementation of the Smart Home Device Communications Protocol (SHDC)"
readme = "README.md"
authors = [
    {name = "Argo Nickerson", email = "argo@envopen.org"},
]
maintainers = [
    {name = "Argo Nickerson", email = "argo@envopen.org"},
]
keywords = [
    "smart-home",
    "iot",
    "protocol",
    "communication",
    "security",
    "cryptography",
    "automation",
    "networking",
    "embedded",
    "devices"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Hardware",
    "Environment :: No Input/Output (Daemon)",
    "Natural Language :: English",
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0",
    "dataclasses-json>=0.6.0",
    "typing-extensions>=4.7.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
shdc-hub = "shdc.cli.hub:main"
shdc-sensor = "shdc.cli.sensor:main"

[project.urls]
Homepage = "https://github.com/envopentech/py-shdc"
Documentation = "https://py-shdc.readthedocs.io/"
Repository = "https://github.com/envopentech/py-shdc.git"
Issues = "https://github.com/envopentech/py-shdc/issues"

[project.license]
text = "LGPL-2.1"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
ignore_missing_imports = true
ignore_errors = true
